examples/test/testpolicy1014.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1014
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key4: value42
      key42: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value35
      podSelector:
        matchLabels:
          key41: value25
          key46: value32
